--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1>Báki Levente Viktor</h1>
 <p>9.C</p>
 
-<a href="kolazs.webp" target="_blank">Ez itt egy kep</a>
+<a href="kolazs.webp" target="_blank">Ez itt egy kollazs kep</a>
 
 </body>
 </html>
