--- a/index.html
+++ b/index.html
@@ -15,5 +15,17 @@
 
 <a href="kolazs.webp" target="_blank">Ez itt egy kollazs kep</a>
 
+     <div>
+        <h1 style="background-color: red;">Ez itt heading</h1>
+    </div>
+
+    <div>
+        <h1 style="background-color: white;" >Ez itt igen</h1>
+    </div>
+
+    <div>
+        <h1 style="background-color: green;">Ez itt ja</h1>
+    </div>
+
 </body>
 </html>
