--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
 
-<style></style>
+<style>
+div {
+    padding: 10px;
+}
+    
+</style>
   
 <h1>Báki Levente Viktor</h1>
 <p>9.C</p>
