--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 <body>
 
 <style>
-div {
-    padding: 10px;
-}
     
 </style>
   
@@ -20,17 +17,15 @@ div {
 
 <a href="kolazs.webp" target="_blank">Ez itt egy kollazs kep</a>
 
-     <div>
-        <h1 style="background-color: red;">Ez itt heading</h1>
-    </div>
+  
+        <h1 style="background-color: red; height: 100px">Ez itt heading</h1>
+    
 
-    <div>
-        <h1 style="background-color: white;" >Ez itt igen</h1>
-    </div>
+   
+        <h2 style="background-color: white; height: 60px" >Ez itt igen</h1>
 
-    <div>
-        <h1 style="background-color: green;">Ez itt ja</h1>
-    </div>
+
+        <h3 style="background-color: green; height: 100px;">Ez itt ja</h1>
 
 </body>
 </html>
